# gadget-up-2

./: .gitignore  Cargo.toml  build.sh  conrod  golem  package-lock.json  release.sh  three-d  tris_export.py  webpack.config.js  winit
assets/models/: copy.blend  copy.blend1  copy.tris  cut.blend  cut.blend1  cut.tris  cycle_state.blend  cycle_state.blend1  cycle_state.tris  flip_x.blend  flip_x.blend1  flip_x.tris  flip_y.blend  flip_y.blend1  flip_y.tris  pan.blend  pan.blend1  pan.tris  paste.blend  paste.blend1  paste.tris  rotate.blend  rotate.blend1  rotate.tris  rotate_ports_ccw.blend  rotate_ports_ccw.blend1  rotate_ports_ccw.tris  rotate_ports_cw.tris  save.blend  save.blend1  save.tris  select.blend  select.blend1  select.tris  selection_mark.blend  selection_mark.blend1  selection_mark.tris  twist.blend  twist.blend1  twist.tris  (+6 more)
assets/shaders/: basic.vert  color.vert
src/: bitfield.rs  camera.rs  gadget.rs  graphics_ex.rs  grid.rs  input.rs  lib.rs  math.rs  model.rs  preset_gadgets.rs  render.rs  shape.rs  static_map.rs  ui.rs
src/bit_serde/: de.rs  error.rs  mod.rs  ser.rs
src/render/: camera.rs  gadget.rs  lang.rs  mod.rs  model.rs  shader.rs  texture.rs  ui.rs
src/widget/: button.rs  mod.rs  screen.rs  selection_grid.rs  triangles3d.rs
static/: index.html
