# You must change these to your own details.
[package]
name = "gadget-up-2"
description = "Tile-based implementation of gadgets"
version = "0.1.0"
authors = ["Joshua Ani <josh4820@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
panic = "abort"

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.45"
winit = { path = "winit", version = "0.22.2", features = ["web-sys"] }
glow = "0.4.0"
golem = { path = "golem", version = "0.1.5", features = ["web-sys"] }
fnv = "1.0.7"
cgmath = "0.17.0"
itertools = "0.9.0"
conrod_core = { path = "conrod/conrod_core", version = "0.70.0", features = ["wasm-bindgen"] } # until pistoncore-input gets updated in crates.io
conrod_derive = { path = "conrod/conrod_derive", version = "0.70.0" } # until pistoncore-input gets updated in crates.io
conrod_winit = { path = "conrod/backends/conrod_winit", version = "0.70.0" }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
